# Doorknob

./: .env  .gitignore  .vale.ini  Cargo.toml  Makefile  README.md  rust-toolchain.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: linux.yml
src/: chat.rs  config.rs  discord.rs  image.rs  logger.rs  main.rs  stt.rs  tts.rs  types.rs
