# Doorknob - Artificial intelligence program written in Rust.
# Copyright (C) 2024 Theomund
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with this program. If not, see <https://www.gnu.org/licenses/>.

[package]
name = "doorknob"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Theomund"]

[dependencies]
async-openai = "0.24.0"
poise = "0.6.1"
serenity = "0.12.2"
songbird = "0.4.3"
symphonia = { version = "0.5.4", features = ["mp3"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
